--- a/Visualisation Snippets.ipynb
+++ b/Visualisation Snippets.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "For the purposes of this notebook, a completely fake dataset will be used. The code below constructs it.\n",
     "\n",
-    "I could have used a fake dataset, but I find this sort of hacky thing much more fun."
+    "I could have used a model dataset (like the Iris one), but I find this sort of hacky thing much more fun."
    ]
   },
   {
